# AI-Lectures

Deeplearning_with_PyTorch/: Deeplearning_with_PyTorch.ipynb  Dockerfile  README.md  main.py  predict.py  pyproject.toml  test.ipynb  test.py
Deeplearning_with_PyTorch/PyTorch Course/: C1_M1_Lab_1_simple_nn.ipynb  C1_M1_Lab_2_activation_functions.ipynb  C1_M1_Lab_3_tensors.ipynb
Deeplearning_with_PyTorch/model_onnx/: clothing_classifier.onnx
FastAPI_Pydantic/: books.db
LLMs_from_Scratch/: Vizuara_AI_Lectures.txt  main.py  pyproject.toml
LLMs_from_Scratch/Computer_Vision/: 1.Tensorflow_vs_Numpy.ipynb  13.DenseNet,_EfficNet,_Xception_PyTorch_5_flowers.ipynb  14.NASNet_large_PyTorch_5_flowers_ipynb.ipynb  17.annotation.py  17.camera_detection.py  17.image_processing.py  17.read_image.py  18.yolo_annoatation.py  18.yolo_camera2.py  18.yolo_camera_capture.py  19.fall_detection.py  19.fall_detection_streamlit.py  4a.5_flower_dataset_Neural_Network.ipynb  4b.Five_Flowers_ImageClassifcation.ipynb  6b.Transfer_learning_with_finetuning.ipynb
LLMs_from_Scratch/Hands_on_LLMs/: 2-Text_Classification.ipynb  4-LLM_Prod_Prompt_Engineering.ipynb  6-Chapter_7_Advanced_Text_Generation_Techniques_and_Tools.ipynb  7-Chapter 8 - Semantic Search.ipynb
LLMs_from_Scratch/Reasoning_LLMs/: 6.Bellman_Optimality_Equations_Recycling_Robot.ipynb  7.Comparing_TD(0)_and_Monte_Carlo_methods_for_Random_Walk_Problem.ipynb  8.Copy_of_Qwen2_5_(3B)_GRPO.ipynb
LLMs_from_Scratch/stage1_BuildLLM/: 1.Tokenizer.ipynb  2.Attention mechanism.ipynb  3.LLM Architecture.ipynb  Vector_embedding.ipynb
(+41 files in other folders)
