[project]
name = "deeplearning-with-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "keras-image-helper>=0.0.2",
    "numpy>=2.3.4",
    "onnx>=1.19.1",
    "onnxruntime>=1.23.2",
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
]
