[project]
name = "llms-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "notebook>=7.5.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "ultralytics>=8.4.21",
]
